--- a/index.html
+++ b/index.html
@@ -7,26 +7,42 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
   <header>
-    <nav class="navbar">
-      <div class="logo">Sleep Outside</div>
-      <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu">
-        ☰
-      </button>
-      <ul class="nav-links" id="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <nav class="navbar">
+    <div class="logo">Sleep Outside</div>
+
+    <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation menu">
+      ☰
+    </button>
+
+    <ul class="nav-links" id="nav-links">
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header> 
 
   <main>
-    <h1>Welcome to Sleep Outside!</h1>
-    <p>Explore our outdoor gear and camping essentials.</p>
+    <h1>Welcome to Sleep Outside</h1>
+    <p>Your outdoor adventure starts here.</p>
   </main>
+
+  <footer>
+     
+  <p>&copy; <span id="year"></span> Sleep Outside. All rights reserved.</p>
+
+
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
+
+  </footer> 
 
   <script src="scripts/navMenu.js"></script>
 </body>
 </html>
+
