--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="social-links">
       <a href="#" aria-label="Facebook">Fb</a>
       <a href="#" aria-label="Instagram">Ig</a>
-      <a href="#" aria-label="Twitter">Tw</a>
+      <a href="#" aria-label="Twitter">X</a>
     </div>
   </footer> 
 
