--- a/sleep-outside.html
+++ b/sleep-outside.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sleep Outside</title>
+  <title>Sleep Outside | Outdoor Gear for Every Adventure</title>
+  <meta name="description" content="Discover high-quality outdoor sleeping gear including tents, sleeping bags, and accessories. Shop the best equipment for your next adventure.">
+
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <header>
+  <!-- HEADER + NAVIGATION -->
+  <header class="header">
     <nav class="navbar">
       <div class="logo">Sleep Outside</div>
 
@@ -23,27 +26,74 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-  </header> 
+  </header>
 
-  <main>
-    <h1>Welcome to Sleep Outside</h1>
-    <p>Your outdoor adventure starts here.</p>
-    <a href="shop.html" class="btn">Shop Now</a>
-  </main>
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Adventure Starts With the Right Gear</h1>
+      <p>Shop durable tents, cozy sleeping bags, and top-quality outdoor essentials for your next escape.</p>
+      <a href="shop.html" class="btn hero-btn">Shop Now</a>
+    </div>
+  </section>
 
+  <!-- FEATURED PRODUCTS PREVIEW -->
+  <section class="featured">
+    <h2>Featured Gear</h2>
+    <p>Top picks for your next outdoor experience.</p>
+
+    <div class="product-grid">
+
+      <div class="product-card">
+        <img src="images/tent.jpg" alt="Camping tent" loading="lazy">
+        <h3>All-Weather Camping Tent</h3>
+        <p>Durable, spacious, and built for all seasons.</p>
+        <a href="shop.html" class="btn small-btn">View Product</a>
+      </div>
+
+      <div class="product-card">
+        <img src="images/sleepingbag.jpg" alt="Sleeping bag" loading="lazy">
+        <h3>Thermal Sleeping Bag</h3>
+        <p>Stay warm through the coldest nights.</p>
+        <a href="shop.html" class="btn small-btn">View Product</a>
+      </div>
+
+      <div class="product-card">
+        <img src="images/backpack.jpg" alt="Travel backpack" loading="lazy">
+        <h3>Adventure Backpack</h3>
+        <p>Lightweight, water-resistant, and spacious.</p>
+        <a href="shop.html" class="btn small-btn">View Product</a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- NEWSLETTER SIGNUP -->
+  <section class="newsletter">
+    <h2>Stay Updated</h2>
+    <p>Join our mailing list to receive outdoor tips, deals, and adventure guides.</p>
+    <form>
+      <input type="email" placeholder="Enter your email" required>
+      <button class="btn">Subscribe</button>
+    </form>
+  </section>
+
+  <!-- FOOTER -->
   <footer>
     <p>&copy; <span id="year"></span> Sleep Outside. All rights reserved.</p>
     <div class="social-links">
-      <a href="#" aria-label="Facebook">Fb</a>
-      <a href="#" aria-label="Instagram">Ig</a>
-      <a href="#" aria-label="Twitter">X</a>
+      <a href="#" aria-label="Facebook">Facebook</a>
+      <a href="#" aria-label="Instagram">Instagram</a>
+      <a href="#" aria-label="Twitter">Twitter</a>
     </div>
-  </footer> 
+  </footer>
 
+  <!-- JAVASCRIPT -->
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 
   <script src="scripts/navMenu.js"></script>
+
 </body>
 </html>
